style(prettier): change of import order

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,10 @@
 	"singleQuote": true,
 	"arrowParens": "avoid",
 	"importOrder": [
+		"^(react/(.*)$)|^(react$)",
+		"^(next/(.*)$)|^(next$)",
 		"<THIRD_PARTY_MODULES>",
+		"",
 		"^@/app/(.*)$",
 		"^@/components/(.*)$",
 		"^@/graphql/(.*)$",
