--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NEXT_PUBLIC_APP_URL='http://localhost:3000'
 NEXT_PUBLIC_SERVER_URL='http://localhost:4000/graphql'
 NEXT_PUBLIC_WEBSOCKET_URL='ws://localhost:4000/graphql'
 NEXT_PUBLIC_MEDIA_URL=''
+
+NEXT_PUBLIC_TELEGRAM_BOT_URL='https://t.me/teamix_official_bot'
