--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-table": "^8.20.6",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "emoji-picker-react": "^4.12.0",
     "graphql": "^16.10.0",
     "input-otp": "^1.4.2",
