--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.4.4",
     "pigeon-maps": "^0.22.1",
     "react": "^19.0.0",
+    "react-best-gradient-color-picker": "^3.0.14",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
