--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^12.0.6",
     "graphql": "^16.10.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
