--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^12.0.6",
     "graphql": "^16.10.0",
+    "graphql-ws": "^6.0.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
