--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^12.0.6",
     "graphql": "^16.10.0",
@@ -50,11 +51,13 @@
     "pigeon-maps": "^0.22.1",
     "react": "^19.0.0",
     "react-best-gradient-color-picker": "^3.0.14",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
