--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "debounce": "^2.2.0",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^12.0.6",
     "graphql": "^16.10.0",
     "graphql-ws": "^6.0.2",
     "input-otp": "^1.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
@@ -54,6 +56,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-textarea-autosize": "^8.5.7",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -68,6 +71,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@parcel/watcher": "^2.5.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
