--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-best-gradient-color-picker": "^3.0.14",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-textarea-autosize": "^8.5.7",
     "sonner": "^1.7.1",
