--- a/package.json
+++ b/package.json
@@ -11,6 +11,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.5",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.2",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^2.0.4",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/table": "^2.4.3",
+    "@editorjs/underline": "^1.2.1",
+    "@editorjs/warning": "^1.4.1",
     "@graphql-codegen/typescript": "^4.1.2",
     "@graphql-codegen/typescript-operations": "^4.4.0",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
@@ -45,6 +61,7 @@
     "graphql": "^16.10.0",
     "graphql-ws": "^6.0.2",
     "input-otp": "^1.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
