--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^12.0.6",
     "graphql": "^16.10.0",
     "graphql-ws": "^6.0.2",
+    "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
