--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -58,7 +59,7 @@
     "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
@@ -70,6 +71,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-textarea-autosize": "^8.5.7",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
